fix leaderboard and leaderboard top positioning to realign

--- a/app/assets/stylesheets/leaderboard.styl
+++ b/app/assets/stylesheets/leaderboard.styl
@@ -1,12 +1,18 @@
 @import 'variables'
 
+  
 .leaderboard-list
   background-color dark-transparent-50
   border-radius 8px
-  margin 14px
+  margin 10px 15px
+  padding 7px 18px 3px 18px
+
+.leaderboard-top-ten
+  background-color dark-transparent-50
+  border-radius 8px
+  margin 25px 15px
   padding 7px 18px 3px 18px
   
-
 .leaderboard-heading
   font-size 20px
   font-weight bold
